# geonum

./: CHANGELOG.md  Cargo.toml  README.md
.agents/: onboard.md
src/: geonum_mod.rs
src/traits/: chemistry.rs  electromagnetics.rs  mod.rs
tests/: affine_test.rs  algebra_test.rs  arithmetic_test.rs  astrophysics_test.rs  chem_constants_test.rs  chemistry_test.rs  cosmology_test.rs  curve_test.rs  economics_test.rs  em_field_theory_test.rs  exponential_test.rs  field_test.rs  geocollection_test.rs  geometry_test.rs  integral_test.rs  lib_test.rs  numbers_test.rs  orbit_test.rs  projection_test.rs  qm_test.rs  quaternion_test.rs  trigonometry_test.rs
